--- a/localpage.html
+++ b/localpage.html
@@ -1,1 +1,16 @@
-<h1>lol what its a me Khaled</h1>
+<!DOCTYPE html>
+  <head>
+    <meta charset="utf-8">
+    <title>blocked sites</title>
+  </head>
+  <body>
+
+    <h1>lol what its a me Khaled</h1>
+
+    <ul class="items">
+    </ul>
+
+    <!-- script that loads from localstorage -->
+    <script src="page.js"></script> 
+  </body>
+</html>
